# ml_benchmark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ml_benchmark/: __main__.py
ml_benchmark/models/: __init__.py  bisenet_v2.py  convs.py  fassdnet_l2.py  fast_scnn.py
